--- a/컴포넌트 스캔.md
+++ b/컴포넌트 스캔.md
@@ -61,3 +61,34 @@ public class MemberServiceImpl implements MemberService {
 2. `@Autowired`
   - 생성자에 `@Autowired`를 지정하면, 스프링 컨테이너가 자동으로 해당 스프링 빈을 찾아서 주입한다.
   - 타입이 같은 빈을 찾아서 주입한다.
+
+--- 
+
+## 탐색 위치와 기본 스캔 대상
+
+### 탐색할 패키지의 시작 위치 지정
+- 모든 자바 클래스를 스캔하면 시간이 오래 걸릴 수도 있다. 
+- 탐색 시작 위치를 지정해 필요한 위치부터 탐색할 수 있다.
+```java
+@ComponentScan {
+  basePackage = "hello.core", //hello.core 패키지를 포함해서 하위 패키지를 모두 탐색한다.
+
+// 여러 시작 위치를 지정할 수도 있다.
+//basePackage = { "hello.core", "hello.service" }
+}
+```
+- basePackageClasses : 지정한 클래스를 탐색 시작 위치로 지정한다.
+- 지정하지 않으면, `@ComponentScan`이 붙은 설정 정보를 클래스의 패키지가 시작 위치가 된다. 
+
+*권장하는 방법*
+패키지 위치를 지정하지 않고, 설정 정보 클래스의 위치를 프로젝트 최상단에 두는 것이다. 
+
+
+### 컴포넌트 스캔 대상
+- `@ComponentScan`은 `@Component`뿐 만 아니라, 다음의 것들도 스프링 빈에 등록한다.
+- 다음의 것들은 컴포넌트 스캔의 용도 뿐만 아니라, 부가 기능을 제공한다.
+
+  - `@Controller` : 스프링 MVC에서 사용 + 스프링 컨트롤러로 인식
+  - `@Service` : 스프링 비지니스 로직에서 사용 + 특별한 처리를 하지 않고, 개발자들이 핵심 비지니스 로직이 여기 있겠구나 라고 인식하는데 도움이 된다. 
+  - `@Repository` : 스프링 데이터 접근 계층에서 사용 + 스프링 데이터 접근 계층으로 인식하고, 데이터 계층의 예외를 스프링 예외로 변환해준다.
+  - `@Configuration` : 스프링 설정 정보에서 사용 + 스프링이 싱글톤을 유지하도록 한다.  
