--- a/의존관계 자동 주입.md
+++ b/의존관계 자동 주입.md
@@ -35,3 +35,51 @@ private DiscountPolicy rateDiscountPolicy;
 @Autowird
 public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy rateDiscountPolicy)
 ```
+
+### `@Qualifier` 사용
+- @Qualifier는 추가 구분자를 붙여주는 방식이다. 
+
+```java
+// 빈 등록시 @Qualifier를 붙여준다.
+@Component
+@Qualifier("mainDiscountPolicy)
+public class RateDiscountPolicy implements DiscountPolicy {}
+```
+
+생성자 자동 주입 예시
+```java
+@Autowired
+public OrderServiceImpl(MemberRepository memberRepository, @Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy) {
+  this.memberRepository = memberRepository;
+  this.discountPolicy = discountPolicy;
+}
+```
+
+- @Qualifier는 @Qualifier를 찾는 용도로만 사용하는게 명확하다.
+
+> @Qualifier 정리
+> 1. Qualifier끼리 매칭
+> 2. 빈 이름 매칭
+> 3. NoSuchBeanDefinitionException 예외 발생
+
+### `@Primary`사용
+- `@Primary`는 우선순위를 정하는 방법이다. `@Autowired`시 여러 개의 빈이 매칭되면, `@Primary` 애노테이션이 붙은 것이 우선순위를 갖는다.
+
+```java
+@Component
+@Primary
+public class RateDiscountPolicy implements DiscountPolicy{}
+
+@Component
+public class FixDiscountPolicy implements DiscountPolicy{}
+```
+- `@Qualifier`와 `@Primary`중 어떤 것을 사용할지 고민이 된다면...
+
+  - `@Qualifier`의 단점은 주입 받을 때, 모든 코드에 `@Qualifier`를 붙여줘야된다는 점이다.
+  - 반면에 `@Primary`는 `@Qualifier`를 붙일 필요가 없다.
+
+*@Primary와 @Qualifier의 활용*
+- 만약 메인 스프링 빈이 있고, 가끔 사용하는 서브 스프링 빈이 있다고 생각해보자. 메인 빈은 `@Primary`을 적용해서, 편리하게 조회하고, 서브 빈을 획득할 때는 `@Qualifier`를 지정해서 명시적으로 획득하는 방식으로 사용하면 코드를 깔끔하게 유지할 수 있다.
+
+*우선순위*
+- `@Primary`는 기본값이고, `@Qualifier`는 매우 상세하게 동작한다. 스프링은 자동보다는 `수동`이, 넓은 범위의 선택권보다는 `좁은` 범위의 선택권이 우선순위가 높다. 따라서 여기서는 `@Qualifier`가 우선순위가 높다.
