--- a/JPA/연관관계 매핑 기초.md
+++ b/JPA/연관관계 매핑 기초.md
@@ -136,7 +136,46 @@ em.persist(member);
 |--|--------|-------|
 |1 | member1|2|
 
-> `순수 객체 상태를 고려해서 항상 양쪽에 값을 설정하자`
+> `순수 객체 상태를 고려해서 항상 양쪽에 값을 설정하자`  
+
+양쪽에 값을 설정하는 것을 잊어버리기 쉽다! -> `연관관계 편의 메서드를 생성`하자!
+
+Member 엔티티
+```java
+@Entity
+public class Team {
+  ...
+  @ManyToOne
+  @JoinColumn(name = "TEAM_ID")
+  private Team team;
+  ...
+
+  // setTeam으로 설정하기 보다 changeTeam으로   설정해줌으로써 무언가 중요한 역할을 하는구나 라고 알 수   있다.
+  public void changeTeam(Team team) {
+    this.team = team;
+    team.getMembers().add(this);  
+  }
+}
+```
+Team 엔티티
+```java
+@Entity
+public class Team {
+  ...
+  @OneToMany(mappedBy = "team")
+  private List<Member> members = new ArrayList<>();
+  
+  public void addMember(Member member) {
+    member.setTeam(this);
+    members.add(member);
+  }
+  ...
+}
+```
+
+- 연관관계 편의 메서드는 양쪽에 있으면 문제를 일으킬 수 있다. 
+  - 연관관계 일에 넣어도 되고, 다에 넣어도 상관은 없다.
+- 한쪽은 지워주자.
 
 ### 양방향 매핑 정리
 - 단방향 매핑만으로도 이미 연관관계 매핑은 완료
